# pocketbase-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt  main.cpp
include/pocketbase/: client.h  globals.h
include/pocketbase/models/: basemodel.h  collectionmodel.h  listresult.h  logsmodel.h  recordmodel.h  schemafield.h
include/pocketbase/services/: adminservice.h  baseauthstore.h  baseservice.h  collectionservice.h  crudservice.h  fileservice.h  healthservice.h  logservice.h  recordservice.h  sseclient.h
sdk/: adminservice.cpp  adminservice.h  authstore.cpp  authstore.h  backupservice.cpp  backupservice.h  baseauthstore.cpp  baseauthstore.h  client.cpp  client.h  collectionservice.cpp  collectionservice.h  event.h  fileservice.cpp  fileservice.h  globals.h  healthservice.h  localauthstore.cpp  qpocketbase.cpp  qpocketbase.h  realtimeservice.cpp  realtimeservice.h  recordservice.cpp  recordservice.h  settingsservice.h
sdk/dtos/: adminmodel.h  basemodel.cpp  basemodel.h  collectionmodel.h  listresult.cpp  listresult.h  logsmodel.h  recordmodel.h  schemafield.cpp
sdk/dtos/_pending/: adminmodel.h  fileuploadmodel.hpp
sdk/models/: backupmodel.hpp  collectionmodel.hpp  recordmodel.hpp
sdk/models/utils/: basemodel.cpp  basemodel.h  listresult.cpp  listresult.h  schemafield.h
sdk/services/: adminservice.cpp  adminservice.h  baseauthstore.cpp  baseauthstore.h  basecrudservice.cpp  basecrudservice.h  baseservice.h  clientresponseerror.h  collectionservice.cpp  collectionservice.h  crudservice.cpp  crudservice.h  event.cpp  event.h  eventloop.cpp  eventloop.h  healthservice.cpp  healthservice.h  logservice.cpp  logservice.h  realtimeservice.cpp  realtimeservice.h  recordservice.cpp  recordservice.h  settingsservice.cpp  settingsservice.h  sseclient.cpp  sseclient.h
sdk/services/_pending/: adminservice.cpp  backupservice.h  healthservice.cpp  localauthstore.cpp  localauthstore.h  logservice.cpp  logservice.h  realtimeservice.cpp  realtimeservice.h  settingsservice.cpp  sseclient.cpp  sseclient.h
sdk/utils/: basecrudservice.cpp  basecrudservice.h  baseservice.hpp  clientresponseerror.h  crudservice.cpp  crudservice.h  utils.h
src/: CMakeLists.txt  client.cpp  recordservice.h
src/models/: adminmodel.h  basemodel.cpp  listresult.cpp  schemafield.cpp
src/models/_pending/: backupmodel.hpp  fileuploadmodel.hpp
src/services/: adminservice.cpp  baseauthstore.cpp  basecrudservice.cpp  basecrudservice.h  clientresponseerror.h  collectionservice.cpp  crudservice.cpp  event.cpp  event.h  fileservice.cpp  healthservice.cpp  logservice.cpp  realtimeservice.cpp  realtimeservice.h  recordservice.cpp  recordservice.h  settingsservice.cpp  settingsservice.h  sseclient.cpp
src/services/_pending/: adminservice.cpp  backupservice.cpp  backupservice.h  fileservice.cpp  fileservice.h
